--- a/prize/style.css
+++ b/prize/style.css
@@ -32,11 +32,12 @@
 	margin: 0 5px 0 20px;
 }
 
-#prizeed-users{
+#prizeed-users {
 	display: flex;
 	flex-wrap: wrap;
-	align-items: flex-start;
+	align-items: center;
 	align-content: flex-start;
+	flex-direction: column;
 }
 
 #prize-users {
@@ -73,4 +74,44 @@
 	align-items: center;
 	justify-content: center;
 	font-size: 24px;
+	color: #ffffff;
+}
+
+.el-dialog__body {
+	background-image: linear-gradient(to right top, #e52d27, #d42926, #c32625, #b22324, #a12022, #a12022, #a12022, #a12022, #b22324, #c32625, #d42926, #e52d27);
+	    margin-top: 10px;
+}
+
+.prizeed-title {
+	width: 100%;
+	text-align: center;
+	font-size: 36px;
+	font-weight: bold;
+	color: #ff0000;
+	-webkit-text-stroke: 1.5px #ffff00;
+	margin: 0;
+}
+
+.prizeed-prize {
+	margin: 0;
+	color: #f0f0f0;
+	font-size: 20px;
+	margin: 10px 0;
+}
+
+.prizeed-list{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: center;
+}
+
+.prizeed-user {
+	background: -webkit-linear-gradient(#F7E8C1, #F7E8C1, #E8B56E, #E8B56E);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-size: 22px;
+	font-weight: 600;
+	margin: 10px 14px;
 }
