--- a/prize/style.css
+++ b/prize/style.css
@@ -15,8 +15,12 @@
 	margin-right: 20px;
 }
 
+* {
+	font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+}
+
 #title-info>.el-input {
-	width: 640px;
+	width: 840px;
 }
 
 .ws-success {
@@ -78,8 +82,8 @@
 }
 
 .el-dialog__body {
-	background-image: linear-gradient(to right top, #e52d27, #d42926, #c32625, #b22324, #a12022, #a12022, #a12022, #a12022, #b22324, #c32625, #d42926, #e52d27);
-	    margin-top: 10px;
+	background-image: linear-gradient(to right top, #ff6a65, #cb3d3a, #c32625, #b22324, #a12022, #972527, #8d3637, #a12022, #b22324, #c32625, #d42926, #e52d27);
+	margin-top: 10px;
 }
 
 .prizeed-title {
@@ -99,12 +103,13 @@
 	margin: 10px 0;
 }
 
-.prizeed-list{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    align-content: flex-start;
-    justify-content: center;
+.prizeed-list {
+	width: 60%;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	align-content: flex-start;
+	justify-content: center;
 }
 
 .prizeed-user {
